--- a/data/cards/00612115.yaml
+++ b/data/cards/00612115.yaml
@@ -8,7 +8,7 @@ name:
   it: Gladiatore Bestia Retiari
   pt: Fera Gladiatora Retiari
   ja: <ruby>剣闘獣<rt>グラディアルビースト</rt></ruby>レティアリィ
-  ja_romaji: Guradiaru Bīsuto Retiarī
+  ja_romaji: Guradiaru Bīsuto Retiaryi
   ko: 검투수 레티어리
   ko_rr:
   zh-TW:
