--- a/data/cards/24361622.yaml
+++ b/data/cards/24361622.yaml
@@ -108,6 +108,12 @@ sets:
     set_name: Selection 10
     rarities:
     - Rare
+  - set_number: SLF1-JP094
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: LVP1-KR031
     set_name: LINK VRAINS Pack
