--- a/data/cards/31247589.yaml
+++ b/data/cards/31247589.yaml
@@ -8,7 +8,7 @@ name:
   it: Gladiatore Bestia Dimacari
   pt: Fera Gladiadora Dimacari
   ja: <ruby>剣闘獣<rt>グラディアルビースト</rt></ruby>ディカエリィ
-  ja_romaji: Guradiaru Bīsuto Dikaerii
+  ja_romaji: Guradiaru Bīsuto Dikaeryi
   ko: 검투수디카에리
   ko_rr:
   zh-TW:
