--- a/data/cards/31588572.yaml
+++ b/data/cards/31588572.yaml
@@ -8,7 +8,7 @@ name:
   it: Gemelli Svincolati - Sarama
   pt: Gêmeos Desacorrentados - Sarama
   ja: <ruby>破<rt>は</rt></ruby><ruby>械<rt>かい</rt></ruby><ruby>童<rt>どう</rt></ruby><ruby>子<rt>じ</rt></ruby>サラマ
-  ja_romaji: Hakai Dōji Sarama
+  ja_romaji: Hakaidōji Sarama
   ko: 언체인드트윈스 사라마
   ko_rr: Eoncheindeuteuwinseu Sarama
   zh-TW:
