--- a/data/cards/53624265.yaml
+++ b/data/cards/53624265.yaml
@@ -8,7 +8,7 @@ name:
   it: Gemelli Svincolati - Rakea
   pt: Gêmeos Desacorrentados - Rakea
   ja: <ruby>破<rt>は</rt></ruby><ruby>械<rt>かい</rt></ruby><ruby>童<rt>どう</rt></ruby><ruby>子<rt>じ</rt></ruby>ラキア
-  ja_romaji: Hakai Dōji Rakia
+  ja_romaji: Hakaidōji Rakia
   ko: 언체인드트윈스 라키아
   ko_rr: Eoncheindeuteuwinseu Rakia
   zh-TW:
