--- a/data/cards/47961342.yaml
+++ b/data/cards/47961342.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>転<rt>てん</rt></ruby><ruby>轍<rt>てつ</rt></ruby><ruby>地<rt>ち</rt></ruby><ruby>点<rt>てん</rt></ruby>
-  ja_romaji: Tentetsu Chiten
+  ja_romaji: Tentetsuchiten
   ko:
   ko_rr:
   zh-TW:
