--- a/data/cards/57916305.yaml
+++ b/data/cards/57916305.yaml
@@ -12,7 +12,7 @@ name:
   ko: 위치크래프트 크리에이션
   ko_rr: Wichikeuraepeuteu Keurieisyeon
   zh-TW:
-  zh-CN: 魔女术的创造
+  zh-CN: 魔女工艺・创生
 text:
   en: |-
     Add 1 "Witchcrafter" monster from your Deck to your hand. During your End Phase, if you control a "Witchcrafter" monster, while this card is in your GY: You can add this card to your hand. You can only use 1 "Witchcrafter Creation" effect per turn, and only once that turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 덱에서 "위치크래프트" 몬스터 1장을 패에 넣는다. ②: 이 카드가 묘지에 존재하고, 자신 필드에 "위치크래프트" 몬스터가 존재할 경우, 자신 엔드 페이즈에 발동할 수 있다. 이 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合只能有1次使用其中任意1个。
-    ①：从卡组把1只「魔女术」怪兽加入手卡。
-    ②：这张卡在墓地存在，自己场上有「魔女术」怪兽存在的场合，自己结束阶段才能发动。这张卡加入手卡。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：从牌组将1只"魔女工艺"怪兽加入手牌。②：此卡存在于墓地，自己场上有"魔女工艺"怪兽存在的情况下，在自己的结束阶段可以发动。将此卡加入手牌。
 card_type: Spell
 property: Normal
 series:
@@ -145,6 +143,11 @@ sets:
     rarities:
     - Normal Parallel Rare
     - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC063
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
