--- a/data/cards/36261276.yaml
+++ b/data/cards/36261276.yaml
@@ -8,7 +8,7 @@ name:
   it: Teletrasportatore
   pt: Transportador Interdimensional de Matéria
   ja: <ruby>亜<rt>あ</rt></ruby><ruby>空<rt>くう</rt></ruby><ruby>間<rt>かん</rt></ruby><ruby>物<rt>ぶっ</rt></ruby><ruby>質<rt>しつ</rt></ruby><ruby>転<rt>てん</rt></ruby><ruby>送<rt>そう</rt></ruby><ruby>装<rt>そう</rt></ruby><ruby>置<rt>ち</rt></ruby>
-  ja_romaji: Akūkan Busshitsu Tensō Sōchi
+  ja_romaji: Akūkan Busshitsu Tensōsōchi
   ko: 아공간 물질 전송장치
   ko_rr:
   zh-TW: 亞空間物質轉送裝置
