--- a/data/cards/06924874.yaml
+++ b/data/cards/06924874.yaml
@@ -8,7 +8,7 @@ name:
   it: Cucciolo di Drago delle Arpie
   pt: Bebê Dragão de Estimação da Harpia
   ja: ハーピィズペット<ruby>仔竜<rt>ベビードラゴン</rt></ruby>
-  ja_romaji: Hāpyizu Petto Bebīdoragon
+  ja_romaji: Hāpyizu Petto Bebī Doragon
   ko: 해피의 애완 베이비 드래곤
   ko_rr:
   zh-TW:
