--- a/data/cards/34800281.yaml
+++ b/data/cards/34800281.yaml
@@ -8,7 +8,7 @@ name:
   it: Melffy Pinny
   pt: Melffy Pinny
   ja: メルフィー・ラッシィ
-  ja_romaji: Merufī Rasshī
+  ja_romaji: Merufī Rasshyi
   ko: 메르피 랏시
   ko_rr: Mereupi Ratsi
   zh-TW:
@@ -78,6 +78,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 870947
