--- a/data/cards/86148577.yaml
+++ b/data/cards/86148577.yaml
@@ -8,7 +8,7 @@ name:
   it: Guardrago Elpy
   pt: Dragão-Guarda Elpy
   ja: <ruby>守<rt>しゅ</rt></ruby><ruby>護<rt>ご</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>エルピィ
-  ja_romaji: Shugoryū Erupi
+  ja_romaji: Shugoryū Erupyi
   ko: 수호룡 엘피
   ko_rr: Suhoryong Elpi
   zh-TW:
