--- a/data/cards/86308219.yaml
+++ b/data/cards/86308219.yaml
@@ -8,7 +8,7 @@ name:
   it: Lady Arpia Formazione Fenice
   pt: Formação Fênix da Lady Harpia
   ja: ハーピィ・レディ －<ruby>鳳<rt>ほう</rt></ruby><ruby>凰<rt>おう</rt></ruby>の<ruby>陣<rt>じん</rt></ruby>－
-  ja_romaji: Hāpyi Redi - Hō'ō no Jin -
+  ja_romaji: Hāpyi Redi - Hōō no Jin -
   ko: 해피 레이디 －봉황의 진－
   ko_rr: Haepi Reidi - Bonghwang-uijin
   zh-TW:
