--- a/data/cards/95245544.yaml
+++ b/data/cards/95245544.yaml
@@ -12,7 +12,7 @@ name:
   ko: 위치크래프트 피또레
   ko_rr: Wichikeuraepeuteu Pittore
   zh-TW:
-  zh-CN: 魔女术工匠·绘画女巫
+  zh-CN: 魔女工艺・涂装皮特莱
 text:
   en: |-
     During the Main Phase (Quick Effect): You can Tribute this card, then discard 1 Spell; Special Summon 1 "Witchcrafter" monster from your Deck, except "Witchcrafter Pittore". You can banish this card from your GY; draw 1 card, then send 1 "Witchcrafter" card from your hand to the GY, or, if you have none, banish your entire hand. You can only use each effect of "Witchcrafter Pittore" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대의 메인 페이즈에, 이 카드를 릴리스하여, 패에서 마법 카드 1장을 버리고 발동할 수 있다. 덱에서 "위치크래프트 피또레" 이외의 "위치크래프트" 몬스터 1장을 특수 소환한다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 자신은 덱에서 1장 드로우하고, 그 후 패에서 "위치크래프트" 카드 1장을 골라 묘지로 보낸다. 패에 "위치크래프트" 카드가 없을 경우, 패를 전부 제외한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：自己·对方的主要阶段，把这张卡解放，从手卡丢弃1张魔法卡才能发动。从卡组把「魔女术工匠·绘画女巫」以外的1只「魔女术」怪兽特殊召唤。
-    ②：把墓地的这张卡除外才能发动。自己从卡组抽1张，那之后从手卡选1张「魔女术」卡送去墓地。手卡没有「魔女术」卡的场合，手卡全部除外。
+    此卡名的①②效果1回合仅可各使用1次。①：在自己・对手的主要阶段，解放此卡，从手牌将1张魔法卡舍弃可以发动。从牌组将1只"魔女工艺・涂装皮特莱"以外的"魔女工艺"怪兽特殊召唤。②：将墓地的此卡除外可以发动。自己从牌组抽1张，然后从手牌挑选1张"魔女工艺"卡送至墓地。手牌中没有"魔女工艺"卡的情况下，将手牌全部除外。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: WATER
@@ -101,6 +99,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: CL02-SC057
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
