--- a/data/cards/98416533.yaml
+++ b/data/cards/98416533.yaml
@@ -8,7 +8,7 @@ name:
   it: Melffy Wally
   pt: Melffy Wally
   ja: メルフィー・ワラビィ
-  ja_romaji: Merufī Warabī
+  ja_romaji: Merufī Warabyi
   ko: 메르피 왈라비
   ko_rr: Mereupi Wallabi
   zh-TW:
@@ -78,6 +78,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 870945
