--- a/data/cards/07903368.yaml
+++ b/data/cards/07903368.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Summoned: Take 1000 damage, then change this card to Defense Position. During the End Phase, if you took no effect damage this turn: You can take 1 Rock monster with 0 ATK from your Deck, and either add it to your hand or Special Summon it. You can only use this effect of "Crystal Skull" once per turn.
+    If this card is Summoned: Take 1000 damage, then change this card to Defense Position. During the End Phase, if you did not take effect damage this turn: You can either add to your hand or Special Summon 1 Rock monster with 0 ATK from your Deck. You can only use this effect of "Crystal Skull" once per turn.
   de:
   es:
   fr:
@@ -34,6 +34,31 @@ level: 1
 atk: 0
 def: 0
 sets:
+  en:
+  - set_number: BLCR-EN022
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE022
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR022
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT022
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT022
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP022
     set_name: Animation Chronicle 2022
