--- a/data/cards/10186633.yaml
+++ b/data/cards/10186633.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: EN切换
 text:
   en: |-
-    Shuffle 1 "Elemental HERO" or "Neo-Spacian" monster you control into the Deck, and if you do, Special Summon 1 "Elemental HERO" or "Neo-Spacian" monster with a different name from your Deck. You can banish this card from your GY; shuffle both 1 "Elemental HERO" monster and 1 "Neo-Spacian" monster, OR 1 "Elemental HERO Neos", from your GY into the Deck, then draw 1 card. You can only use each effect of "EN Shuffle" once per turn.
+    Shuffle 1 "Elemental HERO" or "Neo-Spacian" monster you control into the Deck, and if you do, Special Summon 1 "Elemental HERO" or "Neo-Spacian" monster with a different name from your Deck. You can banish this card from your GY; shuffle from your GY into the Deck, either 1 "Elemental HERO" monster and 1 "Neo-Spacian" monster, OR 1 "Elemental HERO Neos", then draw 1 card. You can only use each effect of "EN Shuffle" once per turn.
   de:
   es:
   fr:
@@ -31,6 +31,31 @@ text:
 card_type: Spell
 property: Normal
 sets:
+  en:
+  - set_number: BLCR-EN008
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE008
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR008
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT008
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT008
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP008
     set_name: Animation Chronicle 2022
