--- a/data/cards/11808215.yaml
+++ b/data/cards/11808215.yaml
@@ -15,13 +15,13 @@ name:
   zh-CN: 骰子地城
 text:
   en: |-
-    When this card is activated: You can add 1 "Dimension Dice" from your Deck to your hand. At the start of the Battle Phase: You can make each player roll a six-sided die and apply their result to all monsters they control until the end of this turn.
-    ● 1: They lose 1000 ATK.
-    ● 2: They gain 1000 ATK.
-    ● 3: They lose 500 ATK.
-    ● 4: They gain 500 ATK.
-    ● 5: Their current ATK become halved.
-    ● 6: Their current ATK become doubled.
+    When this card is activated: You can add 1 "Dimension Dice" from your Deck to your hand. At the start of the Battle Phase: You can activate this effect; each player rolls a six-sided die and applies the result to all monsters they control, until the end of this turn.
+    ● 1: Lose 1000 ATK.
+    ● 2: Gain 1000 ATK.
+    ● 3: Lose 500 ATK.
+    ● 4: Gain 500 ATK.
+    ● 5: Halve their ATK.
+    ● 6: Double their ATK.
   de:
   es:
   fr:
@@ -52,6 +52,31 @@ text:
 card_type: Spell
 property: Field
 sets:
+  en:
+  - set_number: BLCR-EN005
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE005
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR005
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT005
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT005
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP005
     set_name: Animation Chronicle 2022
