--- a/data/cards/25273572.yaml
+++ b/data/cards/25273572.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: G巨像 飞砾斗牛犬
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can take 1 "G Golem Pebble Dog" from your Deck, and either add it to your hand or Special Summon it, also you cannot Special Summon monsters for the rest of this turn, except Cyberse monsters. If this card is sent from the hand to the GY: You can add 1 "G Golem" card from your Deck to your hand. You can only use each effect of "G Golem Pebble Dog" once per turn.
+    If this card is Normal or Special Summoned: You can add to your hand or Special Summon 1 "G Golem Pebble Dog" from your Deck, also you cannot Special Summon monsters for the rest of this turn, except Cyberse monsters. If this card is sent from the hand to the GY: You can add 1 "G Golem" card from your Deck to your hand. You can only use each effect of "G Golem Pebble Dog" once per turn.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ def: 1000
 series:
 - G Golem
 sets:
+  en:
+  - set_number: BLCR-EN041
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE041
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR041
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT041
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT041
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP041
     set_name: Animation Chronicle 2022
