--- a/data/cards/30118701.yaml
+++ b/data/cards/30118701.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 地雷星 轰鬼
 text:
   en: |-
-    You can Special Summon this card (from your hand) by sending 1 other monster from your hand to the GY, but it loses 500 ATK. You can only Special Summon "Todoroki the Earthbolt Star" once per turn this way. During the Battle Phase (Quick Effect): You can pay 500 LP; Fusion Summon 1 Warrior Fusion Monster from your Extra Deck, using monsters from your hand or field as material. You can only use this effect of "Todoroki the Earthbolt Star" once per turn.
+    You can Special Summon this card (from your hand) by sending 1 other monster from your hand to the GY, but this card loses 500 ATK. You can only Special Summon "Todoroki the Earthbolt Star" once per turn this way. During the Battle Phase (Quick Effect): You can pay 500 LP; Fusion Summon 1 Warrior Fusion Monster from your Extra Deck, using monsters from your hand or field as material. You can only use this effect of "Todoroki the Earthbolt Star" once per turn.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ def: 0
 series:
 - Star
 sets:
+  en:
+  - set_number: BLCR-EN035
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE035
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR035
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT035
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT035
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP035
     set_name: Animation Chronicle 2022
