--- a/data/cards/46570372.yaml
+++ b/data/cards/46570372.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 镇魂的决斗
 text:
   en: |-
-    Each player can Special Summon 1 monster from their GY that was destroyed by battle this turn, in Attack Position, and if you Special Summon "Elemental HERO Neos", if it battles an opponent's monster this turn, its ATK becomes doubled during the Damage Step only. You can only activate 1 "Battle of Sleeping Spirits" per turn.
+    Each player can Special Summon 1 monster from their GY that was destroyed by battle this turn, in Attack Position, and if you Special Summoned "Elemental HERO Neos" by this effect, if it battles your opponent's monster this turn, its ATK becomes doubled during the Damage Step only. You can only activate 1 "Battle of Sleeping Spirits" per turn.
   de:
   es:
   fr:
@@ -31,6 +31,31 @@ text:
 card_type: Spell
 property: Quick-Play
 sets:
+  en:
+  - set_number: BLCR-EN009
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE009
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR009
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT009
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT009
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP009
     set_name: Animation Chronicle 2022
