--- a/data/cards/47292920.yaml
+++ b/data/cards/47292920.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 次元骰子
 text:
   en: |-
-    If you control a card that has an effect that requires a die roll: Tribute 1 monster; Special Summon 1 monster from your hand or Deck that has a monster effect that requires a die roll.
+    If you control a card with an effect that requires a die roll: You can Tribute 1 monster; Special Summon 1 monster with an effect that requires a die roll from your hand or Deck.
   de:
   es:
   fr:
@@ -31,6 +31,31 @@ text:
 card_type: Spell
 property: Normal
 sets:
+  en:
+  - set_number: BLCR-EN006
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE006
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR006
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT006
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT006
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP006
     set_name: Animation Chronicle 2022
