--- a/data/cards/62480168.yaml
+++ b/data/cards/62480168.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 亚马逊的秘汤
 text:
   en: |-
-    When this card is activated: You can add 1 "Amazoness" monster to your hand, or place 1 "Amazoness" Pendulum Monster in your Pendulum Zone, from your Deck. When you take battle damage while you control an "Amazoness" Monster Card: You can gain LP equal to the damage you took. You can only use this effect of "Amazoness Hot Spring" once per turn.
+    When this card is activated: You can take 1 "Amazoness" monster from your Deck, and either add it to your hand or (if it is a Pendulum Monster) place it in your Pendulum Zone. When you take battle damage while you control an "Amazoness" Monster Card: You can gain LP equal to the damage you took. You can only use this effect of "Amazoness Hot Spring" once per turn.
   de:
   es:
   fr:
@@ -33,6 +33,31 @@ property: Continuous
 series:
 - Amazoness
 sets:
+  en:
+  - set_number: BLCR-EN039
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE039
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR039
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT039
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT039
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP039
     set_name: Animation Chronicle 2022
