--- a/data/cards/70786111.yaml
+++ b/data/cards/70786111.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Activate this card by targeting 1 monster with 0 ATK in your GY; Special Summon it in Attack Position, and if you do, equip this card to it. When this card leaves the field, destroy that monster. You can only activate 1 "Stonehenge" per turn.
+    Target 1 monster with 0 ATK in your GY; Special Summon it in Attack Position, and if you do, equip it with this card. When this card, equipped by this effect, leaves the field, destroy that monster. You can only activate 1 "Stonehenge" per turn.
   de:
   es:
   fr:
@@ -30,6 +30,31 @@ text:
 card_type: Spell
 property: Equip
 sets:
+  en:
+  - set_number: BLCR-EN024
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE024
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR024
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT024
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT024
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP024
     set_name: Animation Chronicle 2022
