--- a/data/cards/76076738.yaml
+++ b/data/cards/76076738.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 暗龙族之爪
 text:
   en: |-
-    Equip only to a DARK monster. It gains 600 ATK, also it cannot be destroyed by your opponent's card effects. If this card is sent to the GY because the equipped monster was destroyed by battle and sent to the GY: You can Special Summon that monster to your field, and if you do, equip this card to it, but banish this card when this card leaves the field. You can only use this effect of "Dragon Nails" once per turn.
+    Equip only to a DARK monster. It gains 600 ATK, also it cannot be destroyed by your opponent's card effects. If this card is sent to the GY because the equipped monster was destroyed by battle and sent to the GY: You can Special Summon that monster, and if you do, equip this card to it, but banish this card when it leaves the field. You can only use this effect of "Dragon Nails" once per turn.
   de:
   es:
   fr:
@@ -31,6 +31,31 @@ text:
 card_type: Spell
 property: Equip
 sets:
+  en:
+  - set_number: BLCR-EN003
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE003
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR003
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT003
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT003
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP003
     set_name: Animation Chronicle 2022
