--- a/data/cards/94113093.yaml
+++ b/data/cards/94113093.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 涂鸦本-此路不通
 text:
   en: |-
-    When your Dinosaur monster is targeted for an attack: Negate the attack, then you can Special Summon 1 "Doodle Beast" monster from your GY, and if you do, it cannot be destroyed by battle, but destroy it during the End Phase. If this card is in your GY, except the turn it was sent there: You can banish it; add 1 Level 5 or higher Dinosaur monster from your Deck to your hand. You can only use each effect of "Doodlebook - Uh uh uh!" once per turn.
+    When your Dinosaur monster is targeted for an attack: Negate that attack, then you can Special Summon 1 "Doodle Beast" monster from your GY. It cannot be destroyed by battle, also destroy it during the End Phase. If this card is in your GY, except the turn it was sent there: You can banish this card from your GY; add 1 Level 5 or higher Dinosaur monster from your Deck to your hand. You can only use each effect of "Doodlebook - Uh uh uh!" once per turn.
   de:
   es:
   fr:
@@ -33,6 +33,31 @@ property: Normal
 series:
 - Doodlebook
 sets:
+  en:
+  - set_number: BLCR-EN034
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE034
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR034
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT034
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT034
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP034
     set_name: Animation Chronicle 2022
