--- a/data/cards/04836680.yaml
+++ b/data/cards/04836680.yaml
@@ -15,9 +15,9 @@ name:
   zh-CN: 娱乐伙伴 异色眼祭司
 text:
   en: |-
-    If you control this Pendulum Summoned card: You can activate this effect based on its battle position;
-    ● Attack Position: Banish this card, then target 1 "Performapal" or "Odd-Eyes" monster in your GY; Special Summon it.
-    ● Defense Position: Take 1 "Performapal" or "Odd-Eyes" Pendulum Monster from your Deck, and either add it to your Extra Deck face-up or send it to the GY.
+    During your Main Phase, if you control this Pendulum Summoned card: You can activate the following effect, based on its battle position;
+    ● Attack Position: You can banish this card, then target 1 "Performapal" or "Odd-Eyes" monster in your GY; Special Summon it.
+    ● Defense Position: Take 1 "Performapal" or "Odd-Eyes" Pendulum Monster from your Deck, and either add it to your face-up Extra Deck or send it to the GY.
     You can only use this effect of "Performapal Odd-Eyes Seer" once per turn.
   de:
   es:
@@ -57,6 +57,31 @@ series:
 - Odd-Eyes
 - Performapal
 sets:
+  en:
+  - set_number: BLCR-EN031
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE031
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR031
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT031
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT031
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP031
     set_name: Animation Chronicle 2022
