--- a/data/cards/06180710.yaml
+++ b/data/cards/06180710.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 梦鲨
 text:
   en: |-
-    The first time this card would be destroyed by battle each turn, it is not destroyed. You can only use each of the following effects of "Dream Shark" once per turn. If you control no monsters, or all monsters you control are WATER monsters: You can Special Summon this card from your hand. When a card or effect is activated that would inflict damage to you, while this card is in your GY (Quick Effect): You can Special Summon this card, and if you do, you take no damage from that card/effect, also this card loses 1000 DEF, also banish it when it leaves the field.
+    The first time this card would be destroyed by battle each turn, it is not destroyed. You can only use each of the following effects of "Dream Shark" once per turn. If you control no monsters, or if all monsters you control are WATER: You can Special Summon this card from your hand. When a card or effect that would inflict damage to you is activated, while this card is in your GY (except during the Damage Step): You can Special Summon this card, and if you do, make that effect damage to you 0. If Summoned this way, it loses 1000 DEF, also banish it when it leaves the field.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ def: 2600
 series:
 - Shark
 sets:
+  en:
+  - set_number: BLCR-EN025
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE025
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR025
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT025
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT025
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP025
     set_name: Animation Chronicle 2022
