--- a/data/cards/08025950.yaml
+++ b/data/cards/08025950.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Morphtronic" card.)
-    When this card is activated: Place 3 Morph Counters on it. Once per turn: You can remove 1 Morph Counter from your field, and if you do, Special Summon 1 "Gadget Box Token" (Machine/EARTH/Level 1/ATK 0/DEF 0). While that Token is in the Monster Zone, the player who Summoned it cannot Special Summon monsters from the Extra Deck, except Synchro Monsters. You can only activate 1 "Gadget Box" per turn.
+    When this card is activated: Place 3 Morph Counters on it. Once per turn, during your Main Phase: You can remove 1 Morph Counter from your field, and if you do, Special Summon 1 "Gadget Box Token" (Machine/EARTH/Level 1/ATK 0/DEF 0). While that Token is in the Monster Zone, the player who Summoned it cannot Special Summon monsters from the Extra Deck, except Synchro Monsters. You can only activate 1 "Gadget Box" per turn.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ series:
 - Gadget
 - Morphtronic
 sets:
+  en:
+  - set_number: BLCR-EN019
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE019
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR019
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT019
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT019
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP019
     set_name: Animation Chronicle 2022
