--- a/data/cards/11020863.yaml
+++ b/data/cards/11020863.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 皇家同花顺剑士
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned with "Royal Straight". If you have "Queen's Knight", "King's Knight", and "Jack's Knight" in your GY: You can send 1 monster of each Level between 1 and 5 from your hand and/or Deck to the GY, and if you do, destroy all cards your opponent controls. When this card is destroyed by battle: You can target up to 3 LIGHT Warrior monsters in your GY; Special Summon them. You can only use each effect of "Royal Straight Slasher" once per turn.
+    Cannot be Normal Summoned/Set. Must be Special Summoned with "Royal Straight". If you have all of "Queen's Knight", "King's Knight", and "Jack's Knight" in your GY: You can send 5 monsters, with different Levels of 1, 2, 3, 4, and 5, from your hand and/or Deck to the GY, and if you do, destroy all cards your opponent controls. When this card is destroyed by battle: You can target up to 3 LIGHT Warrior monsters in your GY; Special Summon them. You can only use each effect of "Royal Straight Slasher" once per turn.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ level: 6
 atk: 2400
 def: 1350
 sets:
+  en:
+  - set_number: BLCR-EN001
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE001
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR001
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT001
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT001
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP001
     set_name: Animation Chronicle 2022
