--- a/data/cards/18847598.yaml
+++ b/data/cards/18847598.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 高等宝玉兽 琥珀猛犸
 text:
   en: |-
-    If "Advanced Dark" is not in the Field Zone, send this monster to the GY. Once per turn, when your opponent activates a card or effect that targets your "Advanced Crystal Beast" card(s) and/or "Advanced Dark" (Quick Effect): You can negate the activation. Once per turn, when your "Advanced Crystal Beast" monster is targeted for an attack: You can negate the attack. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
+    If "Advanced Dark" is not in a Field Zone, send this monster to the GY. Once per turn, when your opponent activates a card or effect that targets your "Advanced Crystal Beast" card(s) or "Advanced Dark" (Quick Effect): You can negate the activation. Once per turn, when your "Advanced Crystal Beast" monster is targeted for an attack: You can negate that attack. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ series:
 - Crystal Beast
 - Crystal
 sets:
+  en:
+  - set_number: BLCR-EN014
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE014
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR014
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT014
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT014
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP014
     set_name: Animation Chronicle 2022
