--- a/data/cards/24151924.yaml
+++ b/data/cards/24151924.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ EARTH monsters
-    Your co-linked monsters are unaffected by monster effects activated on your opponent's field. Your opponent's monsters must attack this card, if able. Once per turn: You can discard 1 Cyberse monster; draw 1 card. If this co-linked card is destroyed: You can negate the effects of all face-up cards your opponent currently controls.
+    Co-linked monsters you control are unaffected by monster effects activated on your opponent's field. All monsters your opponent controls that can attack must attack this card. Once per turn: You can discard 1 Cyberse monster; draw 1 card. If this co-linked card is destroyed: You can negate the effects of all face-up cards your opponent currently controls.
   de:
   es:
   fr:
@@ -44,6 +44,31 @@ materials: 2+ EARTH monsters
 series:
 - G Golem
 sets:
+  en:
+  - set_number: BLCR-EN044
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE044
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR044
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT044
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT044
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP044
     set_name: Animation Chronicle 2022
