--- a/data/cards/25396150.yaml
+++ b/data/cards/25396150.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 亚马逊拜谒之间
 text:
   en: |-
-    When this card is activated: You can add 1 "Amazoness" monster to your hand, or place 1 "Amazoness" Pendulum Monster in your Pendulum Zone, from your GY or face-up Extra Deck. If a monster(s) is Special Summoned to your opponent's field and you control an "Amazoness" Monster Card (except during the Damage Step): You can target 1 of those opponent's monsters; gain LP equal to its ATK. You can only use this effect of "Amazoness Hall" once per turn.
+    When this card is activated: You can take 1 "Amazoness" monster from your GY or your face-up Extra Deck, and either add it to your hand or (if it is a Pendulum Monster) place it in your Pendulum Zone. If a monster(s) is Special Summoned to your opponent's field while you control an "Amazoness" Monster Card (except during the Damage Step): You can target 1 of those opponent's monsters; gain LP equal to its ATK. You can only use this effect of "Amazoness Hall" once per turn.
   de:
   es:
   fr:
@@ -33,6 +33,31 @@ property: Continuous
 series:
 - Amazoness
 sets:
+  en:
+  - set_number: BLCR-EN038
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE038
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR038
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT038
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT038
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP038
     set_name: Animation Chronicle 2022
