--- a/data/cards/31230289.yaml
+++ b/data/cards/31230289.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 涂鸦兽-剑龙
 text:
   en: |-
-    If you control no monsters, or all monsters you control are Dinosaur monsters: You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can add 1 "Doodlebook" Spell/Trap from your Deck to your hand, then discard 1 card. You can only use each effect of "Doodle Beast - Stego" once per turn.
+    If you control no monsters, or if all monsters you control are Dinosaur monsters: You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can add 1 "Doodlebook" Spell/Trap from your Deck to your hand, then discard 1 card. You can only use each effect of "Doodle Beast - Stego" once per turn.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ def: 1800
 series:
 - Doodle Beast
 sets:
+  en:
+  - set_number: BLCR-EN032
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE032
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR032
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT032
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT032
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP032
     set_name: Animation Chronicle 2022
