--- a/data/cards/32453837.yaml
+++ b/data/cards/32453837.yaml
@@ -16,8 +16,8 @@ name:
 text:
   en: |-
     2+ Level 2 monsters
-    Cannot be destroyed by battle. You take no battle damage from battles involving this card. Your opponent's monsters must attack if able. When a monster declares an attack: You can activate 1 of these effects;
-    ● Detach 1 material from this card, and if you do, place 1 Hallucination Counter on 1 face-up monster your opponent controls. (The effects of monsters with a Hallucination Counter are negated.)
+    Cannot be destroyed by battle, also you take no battle damage from battles involving this card. All monsters your opponent controls must attack, if able. When an attack is declared: You can activate 1 of these effects;
+    ● Detach 1 material from this card, and if you do, place 1 Hallucination Counter on 1 face-up monster your opponent controls. (The effects, if any, of monsters with Hallucination Counters are negated.)
     ● Inflict damage to your opponent equal to the ATK of 1 monster with a Hallucination Counter.
   de:
   es:
@@ -47,6 +47,31 @@ series:
 - Number
 - Barian Number
 sets:
+  en:
+  - set_number: BLCR-EN029
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE029
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR029
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT029
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT029
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP029
     set_name: Animation Chronicle 2022
