--- a/data/cards/33391067.yaml
+++ b/data/cards/33391067.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 返还诅咒的纸人
 text:
   en: |-
-    When a monster effect is activated that would inflict damage to you: Your opponent takes the damage you would have taken instead. When you take battle damage while this card is in your GY: You can Set this card. You can only use this effect of "Curse Reflection Doll" once per turn.
+    When a monster effect is activated that would inflict damage to you: Your opponent takes that damage instead. When you take battle damage, while this card is in your GY: You can Set this card. You can only use this effect of "Curse Reflection Doll" once per turn.
   de:
   es:
   fr:
@@ -31,6 +31,31 @@ text:
 card_type: Spell
 property: Quick-Play
 sets:
+  en:
+  - set_number: BLCR-EN023
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE023
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR023
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT023
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT023
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP023
     set_name: Animation Chronicle 2022
