--- a/data/cards/37930737.yaml
+++ b/data/cards/37930737.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "G Golem" card.)
-    Target 2 of your EARTH monsters with the same name that are banished and/or in your GY; Special Summon both in Defense Position, but change their ATK/DEF to 0, their effects are negated, also destroy them during the End Phase. If a "G Golem" monster(s) you control would be destroyed by battle or an opponent's card effect, you can banish this card from your GY instead. You can only use each effect of "Gravity Balance" once per turn.
+    Target 2 of your EARTH monsters with the same name that are banished or in your GY; Special Summon both in Defense Position, but negate their effects, change their ATK/DEF to 0, also destroy them during the End Phase. If a "G Golem" monster(s) you control would be destroyed by battle or an opponent's card effect, you can banish this card from your GY instead. You can only use each effect of "Gravity Balance" once per turn.
   de:
   es:
   fr:
@@ -34,6 +34,31 @@ property: Normal
 series:
 - G Golem
 sets:
+  en:
+  - set_number: BLCR-EN046
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE046
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR046
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT046
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT046
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP046
     set_name: Animation Chronicle 2022
