--- a/data/cards/39396763.yaml
+++ b/data/cards/39396763.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 恐龙基座
 text:
   en: |-
-    If your LP are lower than your opponent's: You can Special Summon this card from your hand. During your Main Phase: You can Fusion Summon 1 Fusion Monster from your Extra Deck, using this card you control and other monsters from your hand or field as Fusion Material. You can only use each effect of "Dyna Base" once per turn.
+    If your LP are lower than your opponent's: You can Special Summon this card from your hand. During your Main Phase: You can Fusion Summon 1 Fusion Monster from your Extra Deck, using this card you control and other monsters from your hand or field as material. You can only use each effect of "Dyna Base" once per turn.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ level: 4
 atk: 0
 def: 2100
 sets:
+  en:
+  - set_number: BLCR-EN017
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE017
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR017
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT017
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT017
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP017
     set_name: Animation Chronicle 2022
