--- a/data/cards/46358784.yaml
+++ b/data/cards/46358784.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 高等宝玉兽 翠玉龟
 text:
   en: |-
-    If "Advanced Dark" is not in the Field Zone, send this monster to the GY. Once per turn (Quick Effect): You can target 1 face-up monster on the field; change its battle position. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
+    If "Advanced Dark" is not in a Field Zone, send this monster to the GY. Once per turn (Quick Effect): You can target 1 face-up monster on the field; change its battle position. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ series:
 - Crystal Beast
 - Crystal
 sets:
+  en:
+  - set_number: BLCR-EN012
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE012
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR012
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT012
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT012
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP012
     set_name: Animation Chronicle 2022
