--- a/data/cards/50546029.yaml
+++ b/data/cards/50546029.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ EARTH monsters
-    Your opponent's monsters must attack this card, if able. Once per battle, before damage calculation, if this card battles an opponent's monster (Quick Effect): You can send 1 EARTH monster from your hand to the GY; until the end of this turn, that opponent's monster loses 200 ATK, also negate its effects. When your opponent activates a card or effect that targets a Link Monster(s) you control (Quick Effect): You can negate that effect, and if you do, destroy that card. You can only use this effect of "G Golem Dignified Trilithon" once per turn.
+    All monsters your opponent controls must attack this card, if able. Once per battle, if this card battles an opponent's monster, before damage calculation (Quick Effect): You can send 1 EARTH monster from your hand to the GY; until the end of this turn, that opponent's monster loses 200 ATK, also negate its effects. When your opponent activates a card or effect that targets a Link Monster(s) you control (Quick Effect): You can negate that effect, and if you do, destroy that card. You can only use this effect of "G Golem Dignified Trilithon" once per turn.
   de:
   es:
   fr:
@@ -45,6 +45,31 @@ materials: 2+ EARTH monsters
 series:
 - G Golem
 sets:
+  en:
+  - set_number: BLCR-EN045
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE045
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR045
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT045
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT045
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP045
     set_name: Animation Chronicle 2022
