--- a/data/cards/61668670.yaml
+++ b/data/cards/61668670.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Cyberse monsters
-    You can target 1 EARTH Link Monster in your GY; Special Summon it to your zone this card points to, and if you do, place 1 G Golem Counter on this card. You can only use this effect of "G Golem Crystal Heart" once per turn. An EARTH monster co-linked to this card gains 600 ATK for each G Golem Counter on this card, it can make a second attack during each Battle Phase, also if it attacks a Defense Position monster, inflict piercing battle damage to your opponent.
+    You can target 1 EARTH Link Monster in your GY; Special Summon it to your zone this card points to, and if you do, place 1 GG Counter on this card. You can only use this effect of "G Golem Crystal Heart" once per turn. EARTH monsters co-linked to this card gain 600 ATK for each GG Counter on this card, can make a second attack during each Battle Phase, also if they attack a Defense Position monster, inflict piercing battle damage to your opponent.
   de:
   es:
   fr:
@@ -43,6 +43,31 @@ materials: 2 Cyberse monsters
 series:
 - G Golem
 sets:
+  en:
+  - set_number: BLCR-EN042
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE042
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR042
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT042
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT042
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP042
     set_name: Animation Chronicle 2022
