--- a/data/cards/67725394.yaml
+++ b/data/cards/67725394.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 涂鸦兽-暴龙
 text:
   en: |-
-    You can Tribute Summon this card by Tributing 1 Dinosaur monster. During the Main Phase, if a Dinosaur monster is on the field, you can (Quick Effect): Immediately after this effect resolves, Tribute Summon this card from your hand. You can only use this effect of "Doodle Beast - Tyranno" once per turn. If this card is Normal Summoned: You can destroy 1 monster on the field, then, if this card was Tribute Summoned by Tributing a "Doodle Beast" monster, it gains ATK equal to half the ATK the destroyed monster had on the field.
+    You can Tribute Summon this card by Tributing 1 Dinosaur monster. During the Main Phase, if a Dinosaur monster is on the field, you can (Quick Effect): Immediately after this effect resolves, Tribute Summon this card from your hand. You can only use this effect of "Doodle Beast - Tyranno" once per turn. If this card is Normal Summoned: You can destroy 1 monster on the field, then, if this card was Tribute Summoned by Tributing a "Doodle Beast" monster(s), it gains ATK equal to half the destroyed monster's ATK on the field.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ def: 1200
 series:
 - Doodle Beast
 sets:
+  en:
+  - set_number: BLCR-EN033
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE033
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR033
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT033
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT033
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP033
     set_name: Animation Chronicle 2022
