--- a/data/cards/70508653.yaml
+++ b/data/cards/70508653.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 工作箱
 text:
   en: |-
-    If you control a monster: You can reveal 2 Equip Spells with different names from your Deck, your opponent randomly picks 1 for you to add to your hand, and you place the other card on the bottom of the Deck. You can only use this effect of "Tool Box" once per turn.
+    If you control a monster: You can reveal 2 Equip Spells from your Deck with different names, your opponent randomly picks 1 for you to add to your hand, also place the remaining card on the bottom of your Deck. You can only use this effect of "Tool Box" once per turn.
   de:
   es:
   fr:
@@ -31,6 +31,31 @@ text:
 card_type: Spell
 property: Continuous
 sets:
+  en:
+  - set_number: BLCR-EN021
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE021
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR021
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT021
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT021
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP021
     set_name: Animation Chronicle 2022
