--- a/data/cards/71620241.yaml
+++ b/data/cards/71620241.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 高等宝玉兽 青玉天马
 text:
   en: |-
-    If "Advanced Dark" is not in the Field Zone, send this monster to the GY. If this card is Summoned: You can place 1 of your "Advanced Crystal Beast" monsters that is banished, in your hand, Deck, or GY face-up in your Spell & Trap Zone as a Continuous Spell. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
+    If "Advanced Dark" is not in a Field Zone, send this monster to the GY. If this card is Summoned: You can place 1 of your "Advanced Crystal Beast" monsters that is banished, or in your hand, Deck, or GY, face-up in your Spell & Trap Zone as a Continuous Spell. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ series:
 - Crystal Beast
 - Crystal
 sets:
+  en:
+  - set_number: BLCR-EN016
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE016
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR016
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT016
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT016
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP016
     set_name: Animation Chronicle 2022
