--- a/data/cards/72843899.yaml
+++ b/data/cards/72843899.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 高等宝玉兽 黄玉虎
 text:
   en: |-
-    If "Advanced Dark" is not in the Field Zone, send this monster to the GY. All "Advanced Crystal Beast" monsters you control gain 400 ATK/DEF, also all face-up monsters your opponent controls lose 400 ATK/DEF. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
+    If "Advanced Dark" is not in a Field Zone, send this monster to the GY. All "Advanced Crystal Beast" monsters you control gain 400 ATK/DEF, also monsters your opponent controls lose 400 ATK/DEF. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ series:
 - Crystal Beast
 - Crystal
 sets:
+  en:
+  - set_number: BLCR-EN013
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE013
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR013
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT013
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT013
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP013
     set_name: Animation Chronicle 2022
