--- a/data/cards/75780818.yaml
+++ b/data/cards/75780818.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Machine monster + 1 Dinosaur monster
-    Gains ATK equal to the original ATK of the Dinosaur monster used as Fusion Material for its Summon. You can only use each of the following effects of "Dyna Tank" once per turn. When a card or effect is activated that targets this card (and no other cards) (Quick Effect): You can target 1 other card on the field that would be an appropriate target; that card/effect now targets the new target. If this card in its owner's possession is destroyed by an opponent's card: You can Special Summon 1 Dinosaur monster from your GY.
+    Gains ATK equal to the original ATK of the Dinosaur monster used for its Fusion Summon. You can only use each of the following effects of "Dyna Tank" once per turn. When a card or effect is activated that targets this 1 card on the field (and no other cards) (Quick Effect): You can target 1 other card on the field that would be an appropriate target; that card or effect now targets the new target. If this card in its owner's possession is destroyed by an opponent's card: You can Special Summon 1 Dinosaur monster from your GY.
   de:
   es:
   fr:
@@ -40,6 +40,31 @@ atk: '?'
 def: 2100
 materials: 1 Machine-Type monster + 1 Dinosaur-Type monster
 sets:
+  en:
+  - set_number: BLCR-EN018
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE018
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR018
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT018
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT018
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP018
     set_name: Animation Chronicle 2022
