--- a/data/cards/79663524.yaml
+++ b/data/cards/79663524.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 油油蝉
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can reduce the Levels of all Insect monsters you currently control by 1. If this card's battle position is changed: You can Special Summon 1 "Oily Cicada" from your hand, Deck, or GY. You can only use each effect of "Oily Cicada" once per turn.
+    If this card is Normal or Special Summoned: You can reduce the Levels of all Insect monsters you currently control by 1. If the battle position of this card is changed: You can Special Summon 1 "Oily Cicada" from your hand, Deck, or GY. You can only use each effect of "Oily Cicada" once per turn.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ level: 3
 atk: 1000
 def: 1000
 sets:
+  en:
+  - set_number: BLCR-EN027
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE027
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR027
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT027
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT027
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP027
     set_name: Animation Chronicle 2022
