--- a/data/cards/83575471.yaml
+++ b/data/cards/83575471.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 高等宝玉兽 红玉兽
 text:
   en: |-
-    If "Advanced Dark" is not in the Field Zone, send this monster to the GY. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY. If this card is treated as a Continuous Spell: You can Special Summon this card, then you can Special Summon as many "Advanced Crystal Beast" Monster Cards as possible from your Spell & Trap Zone. You can only use this effect of "Advanced Crystal Beast Ruby Carbuncle" once per turn.
+    If "Advanced Dark" is not in a Field Zone, send this monster to the GY. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY. While this card is treated as a Continuous Spell: You can Special Summon this card, then you can Special Summon as many "Advanced Crystal Beast" Monster Cards as possible from your Spell & Trap Zones. You can only use this effect of "Advanced Crystal Beast Ruby Carbuncle" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ series:
 - Crystal Beast
 - Crystal
 sets:
+  en:
+  - set_number: BLCR-EN010
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE010
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR010
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT010
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT010
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP010
     set_name: Animation Chronicle 2022
