--- a/data/cards/84797028.yaml
+++ b/data/cards/84797028.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 机械装置作响之夜
 text:
   en: |-
-    All face-up monsters on the field become Machine monsters. All Machine monsters you control gain 500 ATK/DEF, also all Machine monsters your opponent controls lose 500 ATK/DEF. You can banish this card from your GY and discard 1 card; add 1 EARTH Machine monster from your Deck to your hand. You can only use this effect of "Clockwork Night" once per turn. You can only activate 1 "Clockwork Night" per turn.
+    All face-up monsters on the field become Machine monsters. Machine monsters you control gain 500 ATK/DEF, also Machine monsters your opponent controls lose 500 ATK/DEF. You can banish this card from your GY, then discard 1 card; add 1 EARTH Machine monster from your Deck to your hand. You can only use this effect of "Clockwork Night" once per turn. You can only activate 1 "Clockwork Night" per turn.
   de:
   es:
   fr:
@@ -31,6 +31,31 @@ text:
 card_type: Spell
 property: Continuous
 sets:
+  en:
+  - set_number: BLCR-EN007
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE007
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR007
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT007
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT007
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: AC02-JP007
     set_name: Animation Chronicle 2022
