--- a/data/cards/84813516.yaml
+++ b/data/cards/84813516.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 铁球魔神 骨碌滚
 text:
   en: |-
-    If a monster battles, at the end of the Damage Step: You can Special Summon this card from your hand. You can send 1 Trap from your hand or Set on your field to the GY; destroy all other monsters in this card's column. If this card in the Monster Zone is destroyed by battle or card effect and sent to the GY: You can target 1 card in your GY; roll a six-sided die, and if the result is 6, add that card to your hand. You can only use each effect of "Thunder Ball" once per turn.
+    At the end of the Damage Step, if a monster battled: You can Special Summon this card from your hand. You can send 1 Trap from your hand or that's Set on your field to the GY; destroy all other monsters in this card's column. If this card in the Monster Zone is destroyed by battle or card effect and sent to the GY: You can target 1 card in your GY; roll a six-sided die, and if the result is 6, add that target to your hand. You can only use each effect of "Thunder Ball" once per turn.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ level: 3
 atk: 450
 def: 400
 sets:
+  en:
+  - set_number: BLCR-EN004
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE004
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR004
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT004
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT004
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP004
     set_name: Animation Chronicle 2022
