--- a/data/cards/97053215.yaml
+++ b/data/cards/97053215.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 EARTH monsters
-    If this card is Special Summoned from the GY: You can target 1 EARTH monster in your GY that can be Normal Summoned/Set; add it to your hand or Special Summon it, but if you Special Summon it, negate its effects, also banish it when it leaves the field. You can only use this effect of "G Golem Stubborn Menhir" once per turn.
+    If this card is Special Summoned from the GY: You can target 1 EARTH monster in your GY that can be Normal Summoned/Set; Special Summon it (but negate its effects, also banish it when it leaves the field) or add it to your hand. You can only use this effect of "G Golem Stubborn Menhir" once per turn.
   de:
   es:
   fr:
@@ -43,6 +43,31 @@ materials: 2 EARTH monsters
 series:
 - G Golem
 sets:
+  en:
+  - set_number: BLCR-EN043
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE043
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR043
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT043
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT043
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP043
     set_name: Animation Chronicle 2022
