--- a/data/cards/98875863.yaml
+++ b/data/cards/98875863.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: G巨像 岩锤
 text:
   en: |-
-    If this card is in your hand: You can discard 1 other Cyberse monster; reduce this card's Level by 2 until the end of this turn. You can Tribute this card; Special Summon 3 "G Golem Tokens" (Cyberse/EARTH/Level 1/ATK 0/DEF 0) in Defense Position, also you cannot Special Summon monsters for the rest of this turn, except Cyberse monsters. You can only use each effect of "G Golem Rock Hammer" once per turn.
+    If this card is in your hand: You can discard 1 other Cyberse monster; reduce this card's Level by 2 until the end of this turn (even after it is Summoned/Set). You can Tribute this card; Special Summon 3 "G Golem Tokens" (Cyberse/EARTH/Level 1/ATK 0/DEF 0) in Defense Position, also you cannot Special Summon monsters for the rest of this turn, except Cyberse monsters. You can only use each effect of "G Golem Rock Hammer" once per turn.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ def: 2400
 series:
 - G Golem
 sets:
+  en:
+  - set_number: BLCR-EN040
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE040
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR040
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT040
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT040
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP040
     set_name: Animation Chronicle 2022
