--- a/data/cards/99991455.yaml
+++ b/data/cards/99991455.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Level 5 or higher LIGHT Warrior monster + 1 EARTH Warrior monster
-    If this card attacks a Defense Position monster, inflict piercing battle damage. If this card battles a monster without a Level, any battle damage this card inflicts to your opponent is doubled. During the End Phase, if this card is in your GY because it was destroyed by battle or card effect and sent there this turn: You can target 2 Level 7 or lower Warrior monsters in your GY; Special Summon them. You can only use this effect of "Raijin the Breakbolt Star" once per turn.
+    If this card attacks a Defense Position monster, inflict piercing battle damage. If this card battles a monster without a Level, any battle damage this card inflicts to your opponent is doubled. During the End Phase, if this card is in the GY because it was destroyed by battle or card effect and sent there this turn: You can target 2 Level 7 or lower Warrior monsters in your GY; Special Summon them. You can only use this effect of "Raijin the Breakbolt Star" once per turn.
   de:
   es:
   fr:
@@ -42,6 +42,31 @@ materials: 1 Level 5 or higher LIGHT Warrior-Type monster + 1 EARTH Warrior-Type
 series:
 - Star
 sets:
+  en:
+  - set_number: BLCR-EN037
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLCR-DE037
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLCR-FR037
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLCR-IT037
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLCR-PT037
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: AC02-JP037
     set_name: Animation Chronicle 2022
