--- a/data/cards/02009101.yaml
+++ b/data/cards/02009101.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN056
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CRMS-DE008
     set_name: Crimson Crisis
@@ -99,6 +103,10 @@ sets:
     - Gold Rare
   - set_number: DUSA-DE078
     set_name: Duelist Saga
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-DE056
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   fr:
@@ -130,6 +138,10 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR056
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CRMS-IT008
     set_name: Crimson Crisis
@@ -159,6 +171,10 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT056
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: AP04-PT004
     set_name: Astral Pack Four
@@ -174,6 +190,10 @@ sets:
     - Gold Rare
   - set_number: DUSA-PT078
     set_name: Duelist Saga
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-PT056
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   ja:
