--- a/data/cards/32710364.yaml
+++ b/data/cards/32710364.yaml
@@ -80,6 +80,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-EN047
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: FOTB-DE001
     set_name: Force of the Breaker
@@ -113,6 +117,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-DE047
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: FOTB-FR001
     set_name: Force of the Breaker
@@ -142,6 +150,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-FR047
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: FOTB-IT001
     set_name: Force of the Breaker
@@ -175,6 +187,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-IT047
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LED2-PT041
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -192,6 +208,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-PT047
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: FOTB-JP001
     set_name: Force of the Breaker
