--- a/data/cards/07093411.yaml
+++ b/data/cards/07093411.yaml
@@ -78,6 +78,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-EN053
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   - set_number: DTP1-EN028
     set_name: Duel Terminal - Preview Wave 2
     rarities:
@@ -121,6 +125,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-DE053
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: FOTB-FR007
     set_name: Force of the Breaker
@@ -152,6 +160,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-FR053
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: FOTB-IT007
     set_name: Force of the Breaker
@@ -187,6 +199,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-IT053
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LED2-PT042
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -205,6 +221,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-PT053
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: FOTB-JP007
     set_name: Force of the Breaker
