--- a/data/cards/32933942.yaml
+++ b/data/cards/32933942.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-EN048
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: FOTB-DE002
     set_name: Force of the Breaker
@@ -101,6 +105,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-DE048
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: FOTB-FR002
     set_name: Force of the Breaker
@@ -126,6 +134,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-FR048
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: FOTB-IT002
     set_name: Force of the Breaker
@@ -155,6 +167,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-IT048
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: OP07-PT031
     set_name: OTS Tournament Pack 7
@@ -172,6 +188,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-PT048
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: FOTB-JP002
     set_name: Force of the Breaker
