--- a/data/cards/63945693.yaml
+++ b/data/cards/63945693.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-EN055
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LED2-DE038
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -64,6 +68,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-DE055
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: LED2-FR038
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -77,6 +85,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-FR055
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LED2-IT038
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -90,6 +102,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-IT055
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LED2-PT038
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -103,6 +119,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-PT055
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP19-JP038
     set_name: 'Duelist Pack: Legend Duelist 2'
