--- a/data/cards/68215963.yaml
+++ b/data/cards/68215963.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-EN049
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: FOTB-DE003
     set_name: Force of the Breaker
@@ -101,6 +105,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-DE049
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: FOTB-FR003
     set_name: Force of the Breaker
@@ -126,6 +134,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-FR049
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: FOTB-IT003
     set_name: Force of the Breaker
@@ -155,6 +167,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-IT049
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: OP07-PT033
     set_name: OTS Tournament Pack 7
@@ -172,6 +188,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
+  - set_number: BLCR-PT049
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: FOTB-JP003
     set_name: Force of the Breaker
