--- a/data/cards/75498415.yaml
+++ b/data/cards/75498415.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN058
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CRMS-DE010
     set_name: Crimson Crisis
@@ -97,6 +101,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: BLCR-DE058
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CRMS-FR010
     set_name: Crimson Crisis
@@ -120,6 +128,10 @@ sets:
     - Rare
   - set_number: LC5D-FR112
     set_name: Legendary Collection 5D's Mega Pack
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-FR058
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   it:
@@ -147,6 +159,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT058
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DL17-PT007
     set_name: Duelist League 17 participation cards
@@ -154,6 +170,10 @@ sets:
     - Rare
   - set_number: LC5D-PT112
     set_name: Legendary Collection 5D's Mega Pack
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-PT058
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   ja:
